# corylus-assistant

./: Cargo.toml
scripts/: .gitignore  prepare_ollama.py
src/: actions.rs  backend.rs  catalog.rs  error.rs  fallback.rs  index.rs  lib.rs  ollama.rs  provision.rs  rag.rs  router.rs  state.rs  tests.rs
