[package]
name = "rust-assistant"
version = "0.1.0"
edition = "2021"
description = "Local LLM assistant engine for Corylus (Ollama backend, RAG, streaming)"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "io-util", "process"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
futures-util = "0.3"
which = "7"
rusqlite = { version = "0.39", features = ["bundled"] }
blake3 = "1.5"
sha2 = "0.10"
hex = "0.4"
zip = { version = "2", default-features = false, features = ["deflate"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tempfile = "3"
